--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<title></title>
+	<title>Esme y Rosy</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<script src="https//code.jquery.com/jquery-3.3.1.min.js"></scrpt>
+		<script src="jquery.scrollUp.js"></script>
+		<script>
+			$(function(){
+			$.scrollUp();
+		});
+	</script>
 </head>
 <body>
 	<div class="contenido">
