--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<title>Esme y Rosy</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-	<script src="https//code.jquery.com/jquery-3.3.1.min.js"></scrpt>
+	<script src="https//code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="jquery.scrollUp.js"></script>
 		<script>
 			$(function(){
