--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 	
 </head>
 <body>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v3.0';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	<div class="contenido">
 		<div class="header">
 	<header>
@@ -87,6 +95,7 @@
 					<img class="fotos" src="img/3.jpg">
 				</figure>
 			</article>
+			<div class="fb-comments" data-href="https://brenrene.github.io/rosita/" data-numposts="5"></div>
 	</section>
 	<footer>
 		<img class="pie" src="img/hojas2.jpg">
