--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
 					<img class="fotos" src="img/3.jpg">
 				</figure>
 			</article>
+			<div id="mc_embed_signup">
+<form action="https://rousEsme.us18.list-manage.com/subscribe/post?u=05cad73ea899ea2d5cf6649a7&amp;id=45effeb98b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_05cad73ea899ea2d5cf6649a7_45effeb98b" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
 			<div class="fb-comments" data-href="https://brenrene.github.io/rosita/" data-numposts="5"></div>
 	</section>
 	<footer>
