--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 </div>
 			<div class="fb-comments" data-href="https://brenrene.github.io/rosita/" data-numposts="5"></div>
 	</section>
-	<footer>
-		<img class="pie" src="img/hojas2.jpg">
-	</footer>
 	</div>
+		<footer>
+		<img class="footer" src="img/hojas2.jpg">
+	</footer>
 </body>
 </html>
